# ChangeLog for net-misc/gsutil
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/gsutil/ChangeLog,v 1.8 2012/08/02 15:53:54 vapier Exp $

  01 Jun 2012; Mike Frysinger <vapier@gentoo.org> -gsutil-2011.21.11-r1.ebuild:
  Drop older version to move to non-datestamp releases.

*gsutil-3.7 (21 May 2012)

  21 May 2012; Mike Frysinger <vapier@gentoo.org> +gsutil-3.7.ebuild:
  Version bump.

*gsutil-2011.21.11-r1 (13 Dec 2011)

  13 Dec 2011; Mike Frysinger <vapier@gentoo.org> -gsutil-2011.21.11.ebuild,
  +gsutil-2011.21.11-r1.ebuild:
  Install VERSION file since gsutil sometimes wants to read it #394471 by
  Janusz.

  28 Nov 2011; Mike Frysinger <vapier@gentoo.org> gsutil-2011.21.11.ebuild:
  Force newer version of boto to match what upstream expects.

*gsutil-2011.21.11 (22 Nov 2011)

  22 Nov 2011; Mike Frysinger <vapier@gentoo.org> +gsutil-2011.21.11.ebuild,
  +files/gsutil-system-boto.patch, +metadata.xml:
  Initial import by me.