@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/gsutil
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gsutil/ChangeLog,v 1.8 2012/08/02 15:53:54 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gsutil/ChangeLog,v 1.9 2012/08/02 15:54:22 vapier Exp $
+
+*gsutil-3.14 (02 Aug 2012)
+
+  02 Aug 2012; Mike Frysinger <vapier@gentoo.org> +gsutil-3.14.ebuild:
+  Version bump.
 
   01 Jun 2012; Mike Frysinger <vapier@gentoo.org> -gsutil-2011.21.11-r1.ebuild:
   Drop older version to move to non-datestamp releases.
